--- a/imgui.ini
+++ b/imgui.ini
@@ -10,37 +10,37 @@ Collapsed=0
 
 [Window][Scene2D tree]
 Pos=0,43
-Size=221,460
+Size=190,444
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Project tree]
-Pos=0,505
-Size=213,186
+Pos=0,489
+Size=213,202
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Resources]
-Pos=215,505
-Size=865,186
+Pos=215,489
+Size=865,202
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Inspector]
-Pos=956,43
-Size=124,460
+Pos=673,43
+Size=407,444
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene2D view]
-Pos=223,43
-Size=731,460
+Pos=192,43
+Size=479,444
 Collapsed=0
 DockId=0x0000001B,0
 
 [Window][Log]
-Pos=215,505
-Size=865,186
+Pos=215,489
+Size=865,202
 Collapsed=0
 DockId=0x00000009,1
 
@@ -56,13 +56,13 @@ Size=350,350
 Collapsed=0
 
 [Window][Game view]
-Pos=223,43
-Size=731,460
+Pos=192,43
+Size=479,444
 Collapsed=0
 DockId=0x0000001B,1
 
 [Window][Choose directory]
-Pos=364,183
+Pos=365,185
 Size=350,350
 Collapsed=0
 
@@ -106,24 +106,24 @@ Size=700,425
 Collapsed=0
 
 [Window][Engine settings##Engine]
-Pos=932,476
+Pos=191,149
 Size=700,425
 Collapsed=0
 
 [Window][MiniMenu##Engine]
-Pos=932,840
+Pos=191,513
 Size=700,61
 Collapsed=0
 DockId=0x00000014
 
 [Window][SideTabs##Engine]
-Pos=932,494
+Pos=191,167
 Size=149,344
 Collapsed=0
 DockId=0x00000011
 
 [Window][MainSettingsView##Engine]
-Pos=1083,494
+Pos=342,167
 Size=549,344
 Collapsed=0
 DockId=0x0000000E
@@ -152,38 +152,38 @@ Collapsed=0
 DockId=0x00000016
 
 [Window][Debugger]
-Pos=289,65
-Size=172,852
+Pos=192,43
+Size=181,444
 Collapsed=0
 DockId=0x00000019,0
 
 [Window][CPU]
-Pos=289,83
-Size=172,834
+Pos=192,61
+Size=181,426
 Collapsed=0
 DockId=0x085D2BD9,1
 
 [Window][GPU]
-Pos=289,83
-Size=172,834
+Pos=192,61
+Size=181,426
 Collapsed=0
 DockId=0x085D2BD9,0
 
 [Window][Memory]
-Pos=289,83
-Size=172,834
+Pos=192,61
+Size=181,426
 Collapsed=0
 DockId=0x085D2BD9,2
 
 [Window][Components]
-Pos=965,167
-Size=124,460
+Pos=682,167
+Size=407,444
 Collapsed=0
 DockId=0x9F6C4150,0
 
 [Window][Systems]
-Pos=913,167
-Size=176,498
+Pos=757,167
+Size=332,522
 Collapsed=0
 DockId=0x9F6C4150,1
 
@@ -194,127 +194,14 @@ Collapsed=0
 DockId=0x0000001B,2
 
 [Window][Shaders Editor]
-Pos=1531,65
-Size=212,973
+Pos=2049,65
+Size=289,1015
 Collapsed=0
 DockId=0x0000001C,0
 
-[Window][vlad_shader.glsl]
-Pos=1531,83
-Size=212,955
-Collapsed=0
-DockId=0x353BF52F,0
-
-[Window][Create scene]
-Pos=277,185
-Size=525,350
-Collapsed=0
-
-[Window][New Java.Component file]
-Pos=277,185
-Size=525,350
-Collapsed=0
-
-[Window][New project]
-Pos=277,185
-Size=525,350
-Collapsed=0
-
-[Window][funny_effect.glsl]
-Pos=1602,83
-Size=281,828
-Collapsed=0
-DockId=0x0000001D,0
-
-[Window][test02.glsl]
-Pos=1464,83
-Size=279,832
-Collapsed=0
-DockId=0x353BF52F,0
-
-[Window][for_alesha_shader.glsl]
-Pos=1853,83
-Size=281,834
-Collapsed=0
-DockId=0x0000001D,0
-
-[Window][test00.glsl]
-Pos=1531,83
-Size=212,955
-Collapsed=0
-DockId=0x353BF52F,0
-
-[Window][new_shader.glsl]
-Pos=1531,83
-Size=212,955
-Collapsed=0
-DockId=0x353BF52F,0
-
-[Window][PPLayer "default"]
-Pos=479,65
-Size=983,973
-Collapsed=0
-DockId=0x0000001B,2
-
-[Window][effect_2.glsl]
-Pos=1464,83
-Size=279,955
-Collapsed=0
-DockId=0x353BF52F,0
-
-[Window][test01.glsl]
-Pos=456,61
-Size=279,419
-Collapsed=0
-DockId=0x353BF52F,0
-
-[Window][default2.glsl]
-Pos=1531,83
-Size=212,955
-Collapsed=0
-DockId=0x353BF52F,0
-
-[Window][default.glsl]
-Pos=1464,83
-Size=279,955
-Collapsed=0
-DockId=0x353BF52F,0
-
-[Window][New GLSL.MeshComplexShader file]
-Pos=277,185
-Size=525,350
-Collapsed=0
-
-[Window][New GLSL.PostprocessingComplexShader file]
-Pos=1017,513
-Size=525,350
-Collapsed=0
-
-[Window][pptest.glsl]
-Pos=1531,83
-Size=212,955
-Collapsed=0
-DockId=0x353BF52F,0
-
-[Window][pp_shader0.glsl]
-Pos=1531,83
-Size=212,955
-Collapsed=0
-DockId=0x353BF52F,0
-
-[Window][Tasks]
-Pos=2286,1227
-Size=274,100
-Collapsed=0
-
-[Window][Build project]
-Pos=277,185
-Size=525,350
-Collapsed=0
-
 [Docking][Data]
-DockSpace               ID=0x085D2BD9 Pos=289,83 Size=172,834 CentralNode=1 Selected=0x2B2EBA78
-DockSpace               ID=0x1F304E58 Pos=932,494 Size=700,407 Split=Y
+DockSpace               ID=0x085D2BD9 Window=0x289D2C3F Pos=192,61 Size=181,426 CentralNode=1 Selected=0x2B2EBA78
+DockSpace               ID=0x1F304E58 Pos=191,167 Size=700,407 Split=Y
   DockNode              ID=0x00000013 Parent=0x1F304E58 SizeRef=700,344 Split=X
     DockNode            ID=0x00000011 Parent=0x00000013 SizeRef=149,407 Selected=0xDABAF74A
     DockNode            ID=0x00000012 Parent=0x00000013 SizeRef=549,407 Split=Y
@@ -323,8 +210,7 @@ DockSpace               ID=0x1F304E58 Pos=932,494 Size=700,407 Split=Y
         DockNode        ID=0x0000000E Parent=0x0000000F SizeRef=550,407 CentralNode=1 Selected=0xAC3E4146
       DockNode          ID=0x00000010 Parent=0x00000012 SizeRef=700,54 Selected=0x933B30C4
   DockNode              ID=0x00000014 Parent=0x1F304E58 SizeRef=700,61 Selected=0x1CDC61F4
-DockSpace               ID=0x353BF52F Pos=1531,83 Size=212,955 CentralNode=1 Selected=0xAD2E1078
-DockSpace               ID=0x9F6C4150 Pos=965,167 Size=124,460 CentralNode=1 Selected=0xA115F62D
+DockSpace               ID=0x9F6C4150 Window=0xF8AAECE4 Pos=682,167 Size=407,444 CentralNode=1 Selected=0xA115F62D
 DockSpace               ID=0xA8CBEDD7 Pos=190,165 Size=700,407 Split=Y
   DockNode              ID=0x00000017 Parent=0xA8CBEDD7 SizeRef=700,341 Split=X
     DockNode            ID=0x00000015 Parent=0x00000017 SizeRef=155,407 Selected=0x2A819510
@@ -334,17 +220,17 @@ DockSpace               ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=1080,702 S
   DockNode              ID=0x0000000B Parent=0xF990106D SizeRef=982,32 Selected=0x5A90505A
   DockNode              ID=0x0000000C Parent=0xF990106D SizeRef=982,938 Split=Y
     DockNode            ID=0x00000006 Parent=0x0000000C SizeRef=1582,899 Split=Y
-      DockNode          ID=0x00000007 Parent=0x00000006 SizeRef=1662,460 Split=X
-        DockNode        ID=0x00000003 Parent=0x00000007 SizeRef=221,957 Selected=0x3EECD7B2
-        DockNode        ID=0x00000005 Parent=0x00000007 SizeRef=857,957 Split=X
-          DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=731,970 Split=X Selected=0xEC9B321F
-            DockNode    ID=0x00000019 Parent=0x00000001 SizeRef=172,1015 Selected=0x289D2C3F
-            DockNode    ID=0x0000001A Parent=0x00000001 SizeRef=1420,1015 Split=X Selected=0xEC9B321F
-              DockNode  ID=0x0000001B Parent=0x0000001A SizeRef=318,1015 CentralNode=1 Selected=0xEC9B321F
-              DockNode  ID=0x0000001C Parent=0x0000001A SizeRef=212,1015 Selected=0xF3BD85C8
-          DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=124,970 Selected=0xF02CD328
-      DockNode          ID=0x00000008 Parent=0x00000006 SizeRef=1662,186 Split=X Selected=0x6D97690D
-        DockNode        ID=0x00000004 Parent=0x00000008 SizeRef=328,145 Selected=0xED1C3A22
-        DockNode        ID=0x00000009 Parent=0x00000008 SizeRef=1332,145 Selected=0x6D97690D
+      DockNode          ID=0x00000007 Parent=0x00000006 SizeRef=1662,444 Split=X
+        DockNode        ID=0x00000003 Parent=0x00000007 SizeRef=190,957 Selected=0x3EECD7B2
+        DockNode        ID=0x00000005 Parent=0x00000007 SizeRef=888,957 Split=X
+          DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=1137,970 Split=X Selected=0xEC9B321F
+            DockNode    ID=0x00000019 Parent=0x00000001 SizeRef=181,1015 Selected=0x289D2C3F
+            DockNode    ID=0x0000001A Parent=0x00000001 SizeRef=296,1015 Split=X Selected=0xEC9B321F
+              DockNode  ID=0x0000001B Parent=0x0000001A SizeRef=1459,1015 CentralNode=1 Selected=0x772F22E0
+              DockNode  ID=0x0000001C Parent=0x0000001A SizeRef=246,1015 Selected=0xF3BD85C8
+          DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=968,970 Selected=0xF02CD328
+      DockNode          ID=0x00000008 Parent=0x00000006 SizeRef=1662,202 Split=X Selected=0x6D97690D
+        DockNode        ID=0x00000004 Parent=0x00000008 SizeRef=213,145 Selected=0xED1C3A22
+        DockNode        ID=0x00000009 Parent=0x00000008 SizeRef=865,145 Selected=0xB7722E25
     DockNode            ID=0x0000000A Parent=0x0000000C SizeRef=1582,37 HiddenTabBar=1 Selected=0xAE51DE0E
 
