--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Dockspace demo]
 Pos=0,0
-Size=2560,1377
+Size=1080,720
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,43 +10,43 @@ Collapsed=0
 
 [Window][Scene2D tree]
 Pos=0,52
-Size=136,1112
+Size=136,455
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Project tree]
-Pos=0,1166
-Size=505,172
+Pos=0,509
+Size=213,172
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Resources]
-Pos=507,1166
-Size=2053,172
+Pos=215,509
+Size=865,172
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Inspector]
-Pos=2207,52
-Size=353,1112
+Pos=653,52
+Size=427,455
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene2D view]
 Pos=138,52
-Size=2067,1112
+Size=207,455
 Collapsed=0
 DockId=0x0000001B,0
 
 [Window][Log]
-Pos=507,1166
-Size=2053,172
+Pos=215,509
+Size=865,172
 Collapsed=0
 DockId=0x00000009,1
 
 [Window][BottomMenu]
-Pos=0,1340
-Size=2560,37
+Pos=0,683
+Size=1080,37
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -57,7 +57,7 @@ Collapsed=0
 
 [Window][Game view]
 Pos=138,52
-Size=2067,1112
+Size=207,455
 Collapsed=0
 DockId=0x0000001B,1
 
@@ -73,7 +73,7 @@ Collapsed=0
 
 [Window][Toolbar View]
 Pos=0,18
-Size=2560,32
+Size=1080,32
 Collapsed=0
 DockId=0x0000000B
 
@@ -153,31 +153,31 @@ DockId=0x00000016
 
 [Window][Debugger]
 Pos=138,52
-Size=289,1112
+Size=245,1112
 Collapsed=0
 DockId=0x00000019,0
 
 [Window][CPU]
 Pos=138,70
-Size=289,1094
+Size=245,1094
 Collapsed=0
 DockId=0x085D2BD9,1
 
 [Window][GPU]
 Pos=138,70
-Size=289,1094
+Size=245,1094
 Collapsed=0
 DockId=0x085D2BD9,0
 
 [Window][Memory]
 Pos=138,70
-Size=289,1094
+Size=245,1094
 Collapsed=0
 DockId=0x085D2BD9,2
 
 [Window][Components]
-Pos=2216,176
-Size=353,1112
+Pos=662,176
+Size=427,455
 Collapsed=0
 DockId=0x9F6C4150,0
 
@@ -194,14 +194,14 @@ Collapsed=0
 DockId=0x0000001B,2
 
 [Window][Shaders Editor]
-Pos=2049,65
-Size=289,1015
+Pos=347,52
+Size=304,455
 Collapsed=0
 DockId=0x0000001C,0
 
 [Window][velocitites]
-Pos=56,181
-Size=44,32
+Pos=74,340
+Size=202,198
 Collapsed=0
 
 [Window][PPLayer "slaysLayer"]
@@ -223,7 +223,7 @@ Collapsed=0
 DockId=0x0000001B,2
 
 [Window][Edit layers]
-Pos=1105,513
+Pos=365,185
 Size=350,350
 Collapsed=0
 
@@ -237,8 +237,42 @@ Pos=-472,-68
 Size=472,100
 Collapsed=0
 
+[Window][Add tag]
+Pos=365,185
+Size=350,350
+Collapsed=0
+
+[Window][Edit tags]
+Pos=365,185
+Size=350,350
+Collapsed=0
+
+[Window][Sample.glsl]
+Pos=435,70
+Size=216,437
+Collapsed=0
+DockId=0x353BF52F,0
+
+[Window][Uniforms]
+Pos=347,88
+Size=298,419
+Collapsed=0
+DockId=0x2F8EF246,0
+
+[Window][Defines]
+Pos=347,88
+Size=298,419
+Collapsed=0
+DockId=0x2F8EF246,1
+
+[Window][default_shader.glsl]
+Pos=347,70
+Size=304,437
+Collapsed=0
+DockId=0x353BF52F,0
+
 [Docking][Data]
-DockSpace               ID=0x085D2BD9 Pos=138,70 Size=289,1094 CentralNode=1 Selected=0x2B2EBA78
+DockSpace               ID=0x085D2BD9 Pos=138,70 Size=245,1094 CentralNode=1 Selected=0xEDC13103
 DockSpace               ID=0x1F304E58 Pos=930,494 Size=700,407 Split=Y
   DockNode              ID=0x00000013 Parent=0x1F304E58 SizeRef=700,344 Split=X
     DockNode            ID=0x00000011 Parent=0x00000013 SizeRef=149,407 Selected=0xDABAF74A
@@ -248,25 +282,27 @@ DockSpace               ID=0x1F304E58 Pos=930,494 Size=700,407 Split=Y
         DockNode        ID=0x0000000E Parent=0x0000000F SizeRef=550,407 CentralNode=1 Selected=0xAC3E4146
       DockNode          ID=0x00000010 Parent=0x00000012 SizeRef=700,54 Selected=0x933B30C4
   DockNode              ID=0x00000014 Parent=0x1F304E58 SizeRef=700,61 Selected=0x1CDC61F4
-DockSpace               ID=0x9F6C4150 Window=0xF8AAECE4 Pos=2216,176 Size=353,1112 CentralNode=1 Selected=0xA115F62D
+DockSpace               ID=0x2F8EF246 Window=0x43824DDF Pos=347,88 Size=298,419 CentralNode=1 Selected=0xB68273D7
+DockSpace               ID=0x353BF52F Window=0xF3BD85C8 Pos=347,70 Size=304,437 CentralNode=1 Selected=0x43824DDF
+DockSpace               ID=0x9F6C4150 Window=0xF8AAECE4 Pos=662,176 Size=427,455 CentralNode=1 Selected=0xA115F62D
 DockSpace               ID=0xA8CBEDD7 Pos=190,165 Size=700,407 Split=Y
   DockNode              ID=0x00000017 Parent=0xA8CBEDD7 SizeRef=700,341 Split=X
     DockNode            ID=0x00000015 Parent=0x00000017 SizeRef=155,407 Selected=0x2A819510
     DockNode            ID=0x00000016 Parent=0x00000017 SizeRef=543,407 CentralNode=1 Selected=0x23415D8D
   DockNode              ID=0x00000018 Parent=0xA8CBEDD7 SizeRef=700,64 Selected=0x069E6D0D
-DockSpace               ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=2560,1359 Split=Y
+DockSpace               ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=1080,702 Split=Y
   DockNode              ID=0x0000000B Parent=0xF990106D SizeRef=982,32 Selected=0x5A90505A
   DockNode              ID=0x0000000C Parent=0xF990106D SizeRef=982,938 Split=Y
     DockNode            ID=0x00000006 Parent=0x0000000C SizeRef=1582,899 Split=Y
       DockNode          ID=0x00000007 Parent=0x00000006 SizeRef=1662,455 Split=X
         DockNode        ID=0x00000003 Parent=0x00000007 SizeRef=136,957 Selected=0x3EECD7B2
         DockNode        ID=0x00000005 Parent=0x00000007 SizeRef=2422,957 Split=X
-          DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=587,970 Split=X Selected=0xEC9B321F
-            DockNode    ID=0x00000019 Parent=0x00000001 SizeRef=289,1015 Selected=0x289D2C3F
-            DockNode    ID=0x0000001A Parent=0x00000001 SizeRef=1707,1015 Split=X Selected=0xEC9B321F
-              DockNode  ID=0x0000001B Parent=0x0000001A SizeRef=1459,1015 CentralNode=1 Selected=0xEC9B321F
-              DockNode  ID=0x0000001C Parent=0x0000001A SizeRef=246,1015 Selected=0xF3BD85C8
-          DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=353,970 Selected=0xF02CD328
+          DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=1993,970 Split=X Selected=0xEC9B321F
+            DockNode    ID=0x00000019 Parent=0x00000001 SizeRef=245,455 Selected=0x289D2C3F
+            DockNode    ID=0x0000001A Parent=0x00000001 SizeRef=1312,455 Split=X Selected=0xEC9B321F
+              DockNode  ID=0x0000001B Parent=0x0000001A SizeRef=207,455 CentralNode=1 Selected=0x772F22E0
+              DockNode  ID=0x0000001C Parent=0x0000001A SizeRef=304,455 Selected=0xF3BD85C8
+          DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=427,970 Selected=0xF02CD328
       DockNode          ID=0x00000008 Parent=0x00000006 SizeRef=1662,172 Split=X Selected=0x6D97690D
         DockNode        ID=0x00000004 Parent=0x00000008 SizeRef=505,145 Selected=0xED1C3A22
         DockNode        ID=0x00000009 Parent=0x00000008 SizeRef=2053,145 Selected=0x6D97690D
